--- a/AppTap/index.html
+++ b/AppTap/index.html
@@ -18,36 +18,37 @@
           <h1>AppTap Docs Generator</h1>
         </div>
         <div class="item">
-            <p>App Title</p>
-            <input type="email" name="email"/>
-           </div>
-           <div class="item">
-            <p>App Package</p>
-            <input type="email" name="email"/>
-           </div>
-           <div class="item">
-            <p>App Type</p>
-            <input type="email" name="email"/>
-           </div>
-           <div class="item">
-            <p>Developer Name</p>
-            <input type="email" name="email"/>
-           </div>
-           <div class="item">
-            <p>Developer Email</p>
-            <input type="email" name="email"/>
-           </div>
-           <div class="item">
-            <p>Website Link</p>
-            <input type="email" name="email"/>
-           </div>
-           <div class="item">
-            <p>Developer Type</p>
-            <input type="email" name="email"/>
-           </div>
-        <div class="btn-block">
-          <button type="submit" href="#">Generate</button>
+            <h2>APP INFO</h2>
         </div>
+        <div class="item">
+          <p>App Title</p>
+          <input type="email" name="email"/>
+         </div>
+         <div class="item">
+          <p>App Package</p>
+          <input type="email" name="email"/>
+         </div>
+         <div class="item">
+          <p>App Type</p>
+          <input type="email" name="email"/>
+         </div>
+         <div class="item">
+          <p>Developer Name</p>
+          <input type="email" name="email"/>
+         </div>
+         <div class="item">
+          <p>Developer Email</p>
+          <input type="email" name="email"/>
+         </div>
+         <div class="item">
+          <p>Website Link</p>
+          <input type="email" name="email"/>
+         </div>
+         <div class="item">
+          <p>Developer Type</p>
+          <input type="email" name="email"/>
+         </div>
+           <button href="index.html">Next</button>
       </form>
     </div>
   </body>
