--- a/AppTap/index.html
+++ b/AppTap/index.html
@@ -29,8 +29,25 @@
           <input type="email" name="email"/>
          </div>
          <div class="item">
-          <p>App Type</p>
-          <input type="email" name="email"/>
+          <label> App Type </label>  
+<select>  
+<option value = "Select"> Select App Type   
+</option> 
+<option value = "Free"> Free   
+</option>  
+<option value = "Open Source"> Open Source   
+</option>  
+<option value = "Freemium"> Freemium  
+</option>  
+<option value = "Ad Supported"> Ad Supported  
+</option>  
+<option value = "Commercial"> Commercial
+</option>  
+<option value = "Personal"> Personal
+</option> 
+<option value = "Test App"> Test App
+</option> 
+</select>
          </div>
          <div class="item">
           <p>Developer Name</p>
