--- a/AppTap/index2.html
+++ b/AppTap/index2.html
@@ -18,10 +18,28 @@
           <h1>AppTap Docs Generator</h1>
         </div>
         <div class="item">
-            <p>App Title</p>
-            <input type="name" name="name"/>
-           </div>
-           <button href="#">IN PROGRESS</button>
+            <h2>Step 2 : DEVELOPER INFO</h2>
+            <hr>
+        </div>
+        <div class="item">
+         </div>
+         <div class="item">
+          <p>Developer Name</p>
+          <input type="email" name="email"/>
+         </div>
+         <div class="item">
+          <p>Developer Email</p>
+          <input type="email" name="email"/>
+         </div>
+         <div class="item">
+          <p>Website Link</p>
+          <input type="email" name="email"/>
+         </div>
+         <div class="item">
+          <p>Developer Type</p>
+          <input type="email" name="email"/>
+         </div>
+           <button href="index.html">Next</button>
       </form>
     </div>
   </body>
