--- a/_page/step3.html
+++ b/_page/step3.html
@@ -11,7 +11,7 @@
 		  <img src="./img/3rd_party_ads/admob.png">
 		  <div>Google&nbsp;Admob&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Google Admob Ads')">
+		  <input type="checkbox" onchange="selectAds('Google Admob Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -19,7 +19,7 @@
 		  <img src="./img/3rd_party_ads/adManager.png">
 		  <div>Google&nbsp;Ads&nbsp;Manager</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Google Ads Manager')">
+		  <input type="checkbox" onchange="selectAds('Google Ads Manager@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -27,7 +27,7 @@
 		  <img src="./img/3rd_party_ads/adcolony.png">
 		  <div>Adcolony&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Adcolony Ads')">
+		  <input type="checkbox" onchange="selectAds('Adcolony Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -35,7 +35,7 @@
 		  <img src="./img/3rd_party_ads/appLovin.png">
 		  <div>Applovin&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Applovin Ads')">
+		  <input type="checkbox" onchange="selectAds('Applovin Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -43,7 +43,7 @@
 		  <img src="./img/3rd_party_ads/appnext.png">
 		  <div>Appnext&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Appnext Ads')">
+		  <input type="checkbox" onchange="selectAds('Appnext Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -51,7 +51,7 @@
 		  <img src="./img/3rd_party_ads/chartboost.png">
 		  <div>Chartboost&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Chartboost Ads')">
+		  <input type="checkbox" onchange="selectAds('Chartboost Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -59,7 +59,7 @@
 		  <img src="./img/3rd_party_ads/facebook.png">
 		  <div>Facebook&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Facebook Ads')">
+		  <input type="checkbox" onchange="selectAds('Facebook Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -67,7 +67,7 @@
 		  <img src="./img/3rd_party_ads/mintegral.png">
 		  <div>Mintegral&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Mintegral Ads')">
+		  <input type="checkbox" onchange="selectAds('Mintegral Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -75,7 +75,7 @@
 		  <img src="./img/3rd_party_ads/mobPub.png">
 		  <div>Mopub&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Mopub Ads')">
+		  <input type="checkbox" onchange="selectAds('Mopub Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -83,7 +83,7 @@
 		  <img src="./img/3rd_party_ads/Pollfish.png">
 		  <div>Pollfish&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Pollfish Ads')">
+		  <input type="checkbox" onchange="selectAds('Pollfish Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -91,7 +91,7 @@
 		  <img src="./img/3rd_party_ads/startAppCore.png">
 		  <div>StartApp&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('StartApp Ads')">
+		  <input type="checkbox" onchange="selectAds('StartApp Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -99,7 +99,7 @@
 		  <img src="./img/3rd_party_ads/Tapjoy.png">
 		  <div>Tapjoy&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Tapjoy Ads')">
+		  <input type="checkbox" onchange="selectAds('Tapjoy Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -107,7 +107,7 @@
 		  <img src="./img/3rd_party_ads/unityBannerAd.png">
 		  <div>Unity&nbsp;Ads</div>
 		  </div>
-		  <input type="checkbox" onchange="selectAds('Unity Ads')">
+		  <input type="checkbox" onchange="selectAds('Unity Ads@https://cttricks.com/')">
 		  <span class="checkmark"></span>
 	  </label>
 	</div>
