--- a/_page/step4.html
+++ b/_page/step4.html
@@ -11,7 +11,7 @@
 		  <img src="../img/3rd_party_services/airtable.png">
 		  <div>Airtable&nbsp;Database</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('Airtable Database')">
+		  <input type="checkbox" onchange="selectTPS('Airtable Database@https://www.airtable.com/privacy')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -19,7 +19,7 @@
 		  <img src="../img/3rd_party_services/cloudinary.png">
 		  <div>Cloudnary&nbsp;Media&nbsp;Database</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('Cloudnary Media Database')">
+		  <input type="checkbox" onchange="selectTPS('Cloudnary Media Database@https://cloudinary.com/privacy')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -27,7 +27,7 @@
 		  <img src="../img/3rd_party_services/firebaseAnalytics.png">
 		  <div>Firebase&nbsp;Analytics</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('Firebase Analytics')">
+		  <input type="checkbox" onchange="selectTPS('Firebase Analytics@https://policies.google.com/privacy')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -35,23 +35,15 @@
 		  <img src="../img/3rd_party_services/firestore.png">
 		  <div>FireStore&nbsp;Database</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('FireStore Database')">
+		  <input type="checkbox" onchange="selectTPS('FireStore Database@https://policies.google.com/privacy')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/firestore.png">
+		  <img src="../img/3rd_party_services/googleDrive.png">
 		  <div>Google&nbsp;Drive</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('Google Drive')">
-		  <span class="checkmark"></span>
-	  </label>
-	  <label class="containerCheckbox">
-	  	  <div>
-		  <img src="../img/3rd_party_services/firestore.png">
-		  <div>Google&nbsp;Play&nbsp;Services</div>
-		  </div>
-		  <input type="checkbox" onchange="selectTPS('Google Play Services')">
+		  <input type="checkbox" onchange="selectTPS('Google Drive@@https://policies.google.com/privacy')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -59,7 +51,7 @@
 		  <img src="../img/3rd_party_services/gPlayApp.png">
 		  <div>Google&nbsp;Play&nbsp;Services</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('Google Play Services')">
+		  <input type="checkbox" onchange="selectTPS('Google Play Services@https://www.google.com/policies/privacy/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -67,7 +59,7 @@
 		  <img src="../img/3rd_party_services/lottieAnimation.png">
 		  <div>Lottie&nbsp;Animation</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('Lottie Animation')">
+		  <input type="checkbox" onchange="selectTPS('Lottie Animation@https://lottiefiles.com/page/privacy-policy')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -75,7 +67,7 @@
 		  <img src="../img/3rd_party_services/OneSignalPush.png">
 		  <div>One&nbsp;Signal&nbsp;Push&nbsp;Notification</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('One Signal Push Notification')">
+		  <input type="checkbox" onchange="selectTPS('One Signal Push Notification@https://onesignal.com/privacy')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -83,7 +75,7 @@
 		  <img src="../img/3rd_party_services/recaptcha.png">
 		  <div>Google&nbsp;Recaptcha</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('Google Recaptcha')">
+		  <input type="checkbox" onchange="selectTPS('Google Recaptcha@https://www.google.com/intl/en-GB/policies/privacy/')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -91,7 +83,7 @@
 		  <img src="../img/3rd_party_services/Spreadsheet.png">
 		  <div>Google&nbsp;Spreasheet</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('Google Spreadsheet')">
+		  <input type="checkbox" onchange="selectTPS('Google Spreadsheet@https://policies.google.com/privacy')">
 		  <span class="checkmark"></span>
 	  </label>
 	  <label class="containerCheckbox">
@@ -99,7 +91,7 @@
 		  <img src="../img/3rd_party_services/yandex_new.png">
 		  <div>Yandex&nbsp;API</div>
 		  </div>
-		  <input type="checkbox" onchange="selectTPS('Yandex API')">
+		  <input type="checkbox" onchange="selectTPS('Yandex API@https://yandex.com/legal/privacy/')">
 		  <span class="checkmark"></span>
 	  </label>
 	</div>
