--- a/_page/step5.html
+++ b/_page/step5.html
@@ -7,7 +7,7 @@
 <div class="formContainer">
 	<p>If you appreciate my work &amp; want to support the project</p>
 	<ul>
-		<li>Consider sponsoring me on Github</li>
+		<li>Consider sponsoring this project on Github</li>
 		<li>Consider buying me a cup of coffee</li>
 		<li>Add a comment in the project's GuestBook</li>
 	</ul>
