--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<script>
 		var _HTMLPage = ['step1','step2','step3','step4','step5'];
 		_HTMLPage.forEach((e)=>{
-			var Page = window.location.href.replace('index.html',"_page/"+ e + ".html");
+			var Page = window.location.href.replace(window.location.href.split("/").pop(), "_page/"+ e + ".html");
 			var xhttp = new XMLHttpRequest();
 			xhttp.onreadystatechange = function(){
 				if(this.readyState == 4){
@@ -134,6 +134,9 @@
 			ThirdPartyServices.push(e);
 			console.log(ThirdPartyServices);
 		}
+		
+		/*Start Composing*/
+		
 	</script>
 </body>
 </html>
