Added Disclaimer  page & few small CSS change
Now we have to make a compete privacy policy page to connect with the info given by user and generate AppTAP

--- a/_page/step1.html
+++ b/_page/step1.html
@@ -40,6 +40,10 @@
 			</datalist>
 		</div>
 	</div>
+	<div class="column1" style="margin-bottom: 25px;">
+		<p>Users Personal Information</p>
+		<input type="text" id="DeveloperWebsiteLink" value="" placeholder="Name, Email, Phone, ...">
+	</div>
 	<div class="twoColumns">
 		<div class="column1">
 			<p>Policy Effective Date</p>
