--- a/_page/step5.html
+++ b/_page/step5.html
@@ -18,11 +18,14 @@
 		document.getElementById('step4').style.display='block';
 		setCurrentStep(4);
 		">Back</button>
-		<button id="next">Download It!</button>
+		<button id="next" onclick="DownloadIt()">Download It!</button>
 	</div>
 	<!--Disclamer-->
 	<br>
 	<br>
 	<br>
-	<p>The accuracy of the generated privacy policy and terms &amp; conditions on this website is not legally binding. Use at your own risk. <a href="#" target="_blank">Read the full disclamer here</a>.</p>
+	<p>The accuracy of the generated privacy policy and terms &amp; conditions on this website is not legally binding. Use at your own risk. <a onclick="
+	document.getElementById('step5').style.display='none';
+	document.getElementById('disclamer').style.display='block';
+	">Read the full disclamer here</a>.</p>
 </div>
