--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		var _HTMLPage = ['step1','step2','step3','step4','step5'];
 		_HTMLPage.forEach((e)=>{
 			var Page = window.location.href.replace(window.location.href.split("/").pop(), "_page/"+ e + ".html");
+			console.log("Calling: "+ Page);
 			var xhttp = new XMLHttpRequest();
 			xhttp.onreadystatechange = function(){
 				if(this.readyState == 4){
