Image Size Reduces
Few Minor fixes
Image Size reduces to ~5kb
And fixed some silly mistakes.

--- a/_page/disclaimer.html
+++ b/_page/disclaimer.html
@@ -9,7 +9,7 @@
 	<!--Buttons-->
 	<div class="buttonsContainer">
 		<button id="back" onclick="
-		document.getElementById('disclamer').style.display='none';
+		document.getElementById('disclaimer').style.display='none';
 		document.getElementById('step5').style.display='block';
 		">Back</button>
 	</div>
