--- a/_page/step2.html
+++ b/_page/step2.html
@@ -1,5 +1,5 @@
 <div class="emoji">
-	<img src="img/2Fingure.png" style="height: 32px">
+	<img src="img/step2.png" style="height: 32px">
 </div>
 <p class="stepCountShortScreen">Step 2 Of 5</p>
 <h1>Developer Information</h1>
