--- a/_page/step3.html
+++ b/_page/step3.html
@@ -1,5 +1,5 @@
 <div class="emoji">
-	<img src="../img/crossfingure.png" style="height: 32px">
+	<img src="./img/step3.png" style="height: 32px">
 </div>
 <p class="stepCountShortScreen">Step 3 Of 5</p>
 <h1>Ads Information</h1>
