--- a/_page/step4.html
+++ b/_page/step4.html
@@ -1,5 +1,5 @@
 <div class="emoji">
-	<img src="./img/handshake.png" style="height: 32px">
+	<img src="./img/step4.png" style="height: 32px">
 </div>
 <p class="stepCountShortScreen">Step 4 Of 5</p>
 <h1>3rd Party Services</h1>
@@ -8,7 +8,7 @@
 	<div class="checkboxContainer">
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/airtable.png">
+		  <img src="./img/3rd_party_services/airtable.png">
 		  <div>Airtable&nbsp;Database</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('Airtable Database@https://www.airtable.com/privacy')">
@@ -16,7 +16,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/cloudinary.png">
+		  <img src="./img/3rd_party_services/cloudinary.png">
 		  <div>Cloudnary&nbsp;Media&nbsp;Database</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('Cloudnary Media Database@https://cloudinary.com/privacy')">
@@ -24,7 +24,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/firebaseAnalytics.png">
+		  <img src="./img/3rd_party_services/firebaseAnalytics.png">
 		  <div>Firebase&nbsp;Analytics</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('Firebase Analytics@https://policies.google.com/privacy')">
@@ -32,7 +32,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/firestore.png">
+		  <img src="./img/3rd_party_services/firestore.png">
 		  <div>FireStore&nbsp;Database</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('FireStore Database@https://policies.google.com/privacy')">
@@ -40,7 +40,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/googleDrive.png">
+		  <img src="./img/3rd_party_services/googleDrive.png">
 		  <div>Google&nbsp;Drive</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('Google Drive@@https://policies.google.com/privacy')">
@@ -48,7 +48,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/gPlayApp.png">
+		  <img src="./img/3rd_party_services/gPlayApp.png">
 		  <div>Google&nbsp;Play&nbsp;Services</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('Google Play Services@https://www.google.com/policies/privacy/')">
@@ -56,7 +56,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/lottieAnimation.png">
+		  <img src="./img/3rd_party_services/lottieAnimation.png">
 		  <div>Lottie&nbsp;Animation</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('Lottie Animation@https://lottiefiles.com/page/privacy-policy')">
@@ -64,7 +64,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/OneSignalPush.png">
+		  <img src="./img/3rd_party_services/OneSignalPush.png">
 		  <div>One&nbsp;Signal&nbsp;Push&nbsp;Notification</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('One Signal Push Notification@https://onesignal.com/privacy')">
@@ -72,7 +72,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/recaptcha.png">
+		  <img src="./img/3rd_party_services/recaptcha.png">
 		  <div>Google&nbsp;Recaptcha</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('Google Recaptcha@https://www.google.com/intl/en-GB/policies/privacy/')">
@@ -80,7 +80,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/Spreadsheet.png">
+		  <img src="./img/3rd_party_services/Spreadsheet.png">
 		  <div>Google&nbsp;Spreasheet</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('Google Spreadsheet@https://policies.google.com/privacy')">
@@ -88,7 +88,7 @@
 	  </label>
 	  <label class="containerCheckbox">
 	  	  <div>
-		  <img src="../img/3rd_party_services/yandex_new.png">
+		  <img src="./img/3rd_party_services/yandex_new.png">
 		  <div>Yandex&nbsp;API</div>
 		  </div>
 		  <input type="checkbox" onchange="selectTPS('Yandex API@https://yandex.com/legal/privacy/')">
