--- a/_page/step5.html
+++ b/_page/step5.html
@@ -1,5 +1,5 @@
 <div class="emoji">
-	<img src="../img/done.png" style="height: 32px">
+	<img src="./img/step5.png" style="height: 32px">
 </div>
 <p class="stepCountShortScreen">Step 5 Of 5</p>
 <h1>Generated Successfully!</h1>
@@ -26,6 +26,6 @@
 	<br>
 	<p>The accuracy of the generated privacy policy and terms &amp; conditions on this website is not legally binding. Use at your own risk. <a onclick="
 	document.getElementById('step5').style.display='none';
-	document.getElementById('disclamer').style.display='block';
+	document.getElementById('disclaimer').style.display='block';
 	">Read the full disclamer here</a>.</p>
 </div>
