--- a/_page/step1.html
+++ b/_page/step1.html
@@ -1,6 +1,6 @@
 
 <div class="emoji">
-	<img src="img/FingureTop.png" style="height: 21px; transform: rotate(-90deg);">
+	<img src="img/step1.png" style="height: 21px; transform: rotate(-90deg);">
 </div>
 <p class="stepCountShortScreen">Step 1 Of 5</p>
 <h1>App Information</h1>
